syntax = "proto3";

package fun.dodo.common.meta;

option java_multiple_files = true;
option java_generate_equals_and_hash = true;

option java_package = "fun.dodo.common.meta";
option java_outer_classname = "UserProto";

option csharp_namespace = "Dodo.common.Meta.KnownTypes";

option objc_class_prefix = "HLW";

// 定义
message User {
    // ID
    uint64 id = 1;
    // 所有者ID
    uint64 ownerId = 2;
    // 类型
    uint32 type = 3;
    // 名称
    string name = 4;
    // 说明
    string notes = 5;
    // 是否有效
    bool enabled = 21;
    // 创建时间: 用长整数表达
    uint64 createdAt = 22;
    // 更新时间: 用长整数表达
    uint64 updatedAt = 23;
}

// 列表
message UserList {
    repeated User object = 1;
    uint64 count = 2;
    uint64 index = 3;
    uint64 size = 4;
}

// RPC
service UserRpc {
    rpc Get (UserRequest) returns (User) {}
    rpc GetList (UserRequest) returns (UserList) {}
    rpc Add (User) returns (User) {}
    rpc Update (User) returns (User) {}
    rpc Del (UserRequest) returns (UserRequest) {}
}

// RPC请求参数
message UserRequest {
    uint64 id = 1;
    uint64 ownerId = 2;
    uint32 type = 3;
    string name = 4;
    uint32 index = 5;
    uint32 size = 6;
    bool enabled = 7;
    uint32 refresh = 8;
}